src/objects/Market_Masindi__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>3.0 Market Masindi</relationshipLabel>
        <relationshipName>X3_0_Market_Masindi2</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_capture__c</fullName>
        <label>Date of capture</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GPS_Location__c</fullName>
        <label>GPS Location</label>
        <required>true</required>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>List_of_products_to_attain_prices_from__c</fullName>
        <label>List of products to attain prices from</label>
        <picklist>
            <picklistValues>
                <fullName>Maize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robuta Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunflower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K132 Beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Nambale Beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweet Potatoes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cassava</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Market_Name__c</fullName>
        <formula>X3_0_Market__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Times_Qtn_Repeats__c</fullName>
        <label>Number Of Times Qtn Repeats</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_0_Market__c</fullName>
        <label>3.0 Market</label>
        <referenceTo>C3P0_Market__c</referenceTo>
        <relationshipLabel>3.0 Market Masindi</relationshipLabel>
        <relationshipName>X3_0_Market_Masindi2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>3.0 Market Masindi</label>
    <nameField>
        <displayFormat>MM-{0000}</displayFormat>
        <label>3.0 Market Masindi Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3.0 Market Masindi</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>